fix: website improvements
- set background color to yc red
- fixed horizontal scrolling faq
- fixed detail/summary safari issues
- fixed landing page button color

--- a/web/src/styles/main.css
+++ b/web/src/styles/main.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* summary arrow fix */
+details > summary.no-arrow {
+    list-style: none;
+}
+
+details > summary.no-arrow::marker, /* Latest Chrome, Edge, Firefox */ 
+details > summary.no-arrow::-webkit-details-marker /* Safari */ {
+    display: none;
+}
